# LastFM-collage-maker

./: .gitignore  README.md  api.py  ascii_arts.py  base_settings.json  collage_settings.json  images_handle.py  install.sh  lastfm.py  lastfm_selenium.py  main.py  pyproject.toml  requirements.txt  settings.json  user_interact.py  utils.py  validate.py
config/: base_settings.json  settings_utils.py
image/: images_handle.py
lastfm/: lastfm.py  lastfm_selenium.py
settings/: base_settings.json  collage_settings.json  settings_data.py  settings_edit.py
src/: main.py  user_interact.py
src/image/: images_handle.py
src/lastfm/: lastfm.py
src/settings/: main_settings.json  settings_edit.py
src/utils/: messages.py  selenium.py  utils.py  validate.py
utils/: ascii_arts.py  enums.py  files.py  utils.py  validate.py
