[project]
name = "lastfm-collage-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pystyle>=2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]
